set spotlight img as block to prevent extra margin

--- a/src/scss/components/_program-spotlight-item.scss
+++ b/src/scss/components/_program-spotlight-item.scss
@@ -15,6 +15,10 @@ $spotlight-item-breakpoint: 'sm';
 }
 
 .program-spotlight-item__image {
+  img {
+    display: block;
+  }
+
   @include media($spotlight-item-breakpoint) {
     position: absolute;
     top: 0;
